@@ -18,8 +18,10 @@ package com.android.server.personalcontext.component.client;
 
 import android.content.Context;
 import android.content.pm.ServiceInfo;
-import android.service.personalcontext.hint.ContextHint;
+import android.service.personalcontext.hint.ContextHintWithSignature;
 
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.UUID;
 
@@ -34,9 +36,18 @@ public class ServiceClientUnderstander extends ServiceClientRefiner {
     }
 
     @Override
-    public Set<Set<ContextHint>> getInterestingHintClusters(Set<ContextHint> unseenContextHints) {
+    public Set<Set<ContextHintWithSignature>> getInterestedHintClusters(
+            Set<ContextHintWithSignature> allContextHints, Set<UUID> seenIDs, boolean isFirstRun) {
         // TODO(b/452425566): Implement this to use a filter in the package's manifest.
         // For now this runs hints through the understander in one big block.
-        return Set.of(unseenContextHints);
+        final Set<ContextHintWithSignature> interestingHints = new HashSet<>();
+        for (ContextHintWithSignature hint : allContextHints) {
+            if (!seenIDs.contains(hint.getContextHint().getHintId())) interestingHints.add(hint);
+        }
+        if (interestingHints.isEmpty()) {
+            return Collections.emptySet();
+        } else {
+            return Set.of(interestingHints);
+        }
     }
 }
